syntax = "proto3";
import "repo.proto";
import "user.proto";
import "topicspace.proto";

message GRepo {
    Repository parent = 1;
    repeated TopicSpace topicSpaces = 2;
    repeated User users = 3;
    string metaBranch = 4;
}
